# MicStream

./: .gitignore  INSTALL.md  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
pi/: create-image.sh  setup.sh
pi/aasdk-src/: .gitattributes  .gitignore  BUILD.md  CMakePresets.json  Config.cmake.in  DEPENDENCY_FIX_SUMMARY.md  DEVCONTAINER.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  MODERN_LOGGER.md  PACKAGING.md  QUICK_REFERENCE.md  RELEASE.txt  Readme.md  TESTING.md  TROUBLESHOOTING.md  build.bat  build.ps1  migrate_to_modern_logger.sh  test_aap_protobuf_packaging.sh  test_dependencies.sh  test_logger  test_logger.cpp  test_migration  test_migration.cpp
pi/aasdk-src/.devcontainer/: Dockerfile.arm64  Dockerfile.armhf  Dockerfile.x64  FIX_SUMMARY.md  PODMAN_TROUBLESHOOTING.md  README.md  devcontainer-arm64.json  devcontainer-armhf.json  devcontainer.json  post-create.sh
pi/aasdk-src/aasdk_proto/: WifiChannelMessageIdsEnum.proto  WifiInfoRequestMessage.proto  WifiInfoResponseMessage.proto  WifiSecurityRequestMessage.proto  WifiSecurityResponseMessage.proto
pi/aasdk-src/debian/: postinst  (+1 more)
pi/config/: boot-config.txt  crankshaft_env.sh  dnsmasq-additions.conf  openauto.ini  pulseaudio-system.pa  xinitrc
pi/crankshaft-scripts/: bt-autoagent.py  bt-fake-profiles.sh
pi/openauto-src/: .gitignore  CMakeLists.txt  CMakeLists_btservice_only.txt  README.md  RELEASE.txt  TESTPLAN.md  code_of_conduct.md
pi/openauto-src/tests/: CMakeLists.txt
pi/openauto-src/tests/integration/: AndroidAutoIntegrationTests.cpp  BluetoothIntegrationTests.cpp  UIIntegrationTests.cpp  main.cpp
pi/openauto-src/tests/mocks/: MockAndroidAutoEntity.hpp  MockAndroidAutoEntityFactory.hpp  MockAudioOutput.hpp  MockConfiguration.hpp
pi/openauto-src/tests/unit/: ConfigurationTests.cpp  ConnectionTests.cpp  ProjectionTests.cpp  ServiceTests.cpp  main.cpp
pi/scripts/: aa_autolaunch.py  aa_clock_monitor.sh  aa_remote.py  bt_backup_monitor.sh  bt_restore.sh  bt_scan_manager.sh  bt_watchdog.sh  call_audio.sh  sco_enhancer.py  udp_call_receiver.py  udp_mic_receiver.py
pi/systemd/: aa-autolaunch.service  aa-clock-monitor.service  aa-remote.service  bt-autoagent.service  bt-backup.service  bt-fake-profiles.service  bt-persist.service  bt-scan-manager.service  bt-watchdog.service  btservice.service  hciattach.service  openauto.service  safe-upgrade.service  sco-enhancer.service  udp-call-receiver.service  udp-mic-receiver.service
(+598 files in other folders)
